--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="css/style.css">
         <title>toboolist</title>
     </head>
     <body>
         
+        <!-- NAVBAR -->
+        <nav class="nav_bar">
+            <img id="logo" src="img/logo copia.png" alt="Logo toboolist">
+            <h1>Toboolist</h1>
+        </nav>
+        <!-- /NAVBAR -->
+
     </body>
 </html>
