--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
         </nav>
         <!-- /NAVBAR -->
 
+        <!-- MAIN CONTENT -->
+        <main class="main_content">
+
+            <div class="adder">
+                <button class= "btn" id="add_task">Add Task</button>
+                <button class= "btn" id="add_section">Add Section</button>
+            </div>
+
+        </main>
+        <!-- /MAIN CONTENT -->
     </body>
 </html>
