add main +style

--- a/index.html
+++ b/index.html
@@ -20,10 +20,56 @@
         <!-- MAIN CONTENT -->
         <main class="main_content">
 
-            <div class="adder">
+            <!-- ADDER -->
+            <section class="adder">
                 <button class= "btn" id="add_task">Add Task</button>
                 <button class= "btn" id="add_section">Add Section</button>
-            </div>
+            </section>
+            <!-- /ADDER -->
+
+            <!-- FEATURES -->
+            <section class="features">
+                <a href="#" class="line_container">
+                    <div class="arrow">&#9698;</div>
+                    <h2>New Task</h2>
+                </a>
+                <div class="menu hide">
+                    <div class="row_menu">
+                        <div class="check"></div>
+                        <span class="text">Quarterly Newsletter</span>
+                        <div class="property editorial">Editorial</div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="features">
+                <a href="#" class="line_container">
+                    <div class="arrow">&#9698;</div>
+                    <h2>New Task</h2>
+                </a>
+                <div class="menu hide">
+                    <div class="row_menu">
+                        <div class="check"></div>
+                        <span class="text">Quarterly Newsletter</span>
+                        <div class="property editorial">Editorial</div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="features">
+                <a href="#" class="line_container">
+                    <div class="arrow">&#9698;</div>
+                    <h2>New Task</h2>
+                </a>
+                <div class="menu hide">
+                    <div class="row_menu">
+                        <div class="check"></div>
+                        <span class="text">Quarterly Newsletter</span>
+                        <div class="property editorial">Editorial</div>
+                    </div>
+                </div>
+            </section>
+            <!-- /FEATURES -->
 
         </main>
         <!-- /MAIN CONTENT -->
