--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <!-- /ADDER -->
 
             <!-- FEATURES -->
+                <!-- NEW TASK -->
             <section class="features">
                 <a href="#" class="line_container">
                     <div class="arrow">&#9698;</div>
@@ -41,34 +42,74 @@
                     </div>
                 </div>
             </section>
+                <!-- /NEW TASK -->
 
+                <!-- TODAY -->
             <section class="features">
                 <a href="#" class="line_container">
                     <div class="arrow">&#9698;</div>
-                    <h2>New Task</h2>
+                    <h2>Today</h2>
                 </a>
                 <div class="menu hide">
                     <div class="row_menu">
                         <div class="check"></div>
-                        <span class="text">Quarterly Newsletter</span>
+                        <span class="text">Recruiting blog post</span>
                         <div class="property editorial">Editorial</div>
                     </div>
-                </div>
-            </section>
 
-            <section class="features">
-                <a href="#" class="line_container">
-                    <div class="arrow">&#9698;</div>
-                    <h2>New Task</h2>
-                </a>
-                <div class="menu hide">
+                    <div class="row_menu">
+                        <div class="check"></div>
+                        <span class="text">Mobile app launch</span>
+                        <div class="property q_goals">Q1 Goals</div>
+                    </div>
+
+                    <div class="row_menu">
+                        <div class="uncheck"></div>
+                        <span class="text">Interview John H.</span>
+                        <div class="property rescruiting">Rescruiting</div>
+                    </div>
+
                     <div class="row_menu">
                         <div class="check"></div>
                         <span class="text">Quarterly Newsletter</span>
+                        <div class="property mobile">Mobile</div>
+                    </div>
+                </div>
+            </section>
+                <!-- /TODAY -->
+
+                <!-- UPCOMING -->
+            <section class="features">
+                <a href="#" class="line_container">
+                    <div class="arrow">&#9698;</div>
+                    <h2>Upcoming</h2>
+                </a>
+                <div class="menu hide">
+                    <div class="row_menu">
+                        <div class="uncheck"></div>
+                        <span class="text">Schedule meeting with Alex</span>
+                    </div>
+
+                    <div class="row_menu">
+                        <div class="check"></div>
+                        <span class="text">Homepage refresh</span>
+                        <div class="property website">Website</div>
+                    </div>
+
+                    <div class="row_menu">
+                        <div class="check"></div>
+                        <span class="text">Onboard new Sales team members</span>
+                        <div class="property sales">Sales</div>
+                    </div>
+
+                    <div class="row_menu">
+                        <div class="check"></div>
+                        <span class="text">Review editorial calendar</span>
                         <div class="property editorial">Editorial</div>
                     </div>
                 </div>
             </section>
+                <!-- /UPCOMING -->
             <!-- /FEATURES -->
 
         </main>
